syntax = "proto3";
package proxy;

service Proxy {
    rpc AddRoute(AddRouteRequest) returns (AddRouteResponse);
    rpc ListRoutes(ListRoutesRequest) returns (ListRoutesResponse);
    rpc RemoveRoute(RemoveRouteRequest) returns (RemoveRouteResponse);
    rpc ListContainers(ListContainersRequest) returns (ListContainersResponse);
    rpc Version(VersionRequest) returns (VersionResponse);
}

message VersionRequest {}

message VersionResponse {
    string version = 1;
}

message ListContainersRequest {
    bool all = 1;
}

message Container {
    string id = 1;
    string status = 2;
    string image = 3;
}

message ListContainersResponse {
    repeated Container containers = 1;
}

message AddRouteRequest {
    string from = 1;
    string to = 2;
}

message AddRouteResponse {
    string uuid = 1;
}

message ListRoutesRequest {}

message ListRoutesResponse {
    repeated Route routes = 1;
}

message Route {
    string uuid = 1;
    string from = 2;
    string to = 3;
}

message RemoveRouteRequest {
    string uuid = 1;
}

message RemoveRouteResponse {}